# fring

./: CLAUDE.md  README.md  SETUP_GUIDE.md  TEST_SUMMARY.md
backend/: .env.development  .gitignore  BACKEND_TECHNICAL_SPECS.md  conftest.py  main.py  pyproject.toml
backend/migrations/: 001_add_auth_fields.sql
backend/scripts/: create_users.sql  hash_password.py
backend/src/auth/: dependencies.py  jwt.py  password.py
backend/src/config/: settings.py
backend/src/db/: connection.py
backend/src/models/: exceptions.py  schemas.py
backend/src/models/orm/: todo.py
backend/src/routers/: auth.py  tasks.py  users.py
backend/src/test/hurls/: auth.hurl  task.hurl  user.hurl
backend/tests/: test_auth.py  test_models.py  test_tasks.py  test_users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Header.test.jsx  Login.css  Login.jsx  Login.test.jsx  PasswordChange.jsx  PasswordChange.test.jsx  ProtectedRoute.jsx  ProtectedRoute.test.jsx  header.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: TasksPage.css  TasksPage.jsx
frontend/src/utils/: api.js
